--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,9 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
+    "react-virtualized": "^9.22.5",
+    "socket.io-client": "^4.6.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +42,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://192.168.1.8:4000"
+  "proxy": "http://192.168.1.6:4000"
 }
