--- a/vercel.json
+++ b/vercel.json
@@ -4,18 +4,15 @@
   "builds": [
     {
       "src": "backend/server.js",
-      "use": "@vercel/node",
-      "config": {
-        "env": {
-          "NPM_CONFIG_PRODUCTION": "false"
-        }
-      }
-    }
+      "use": "@vercel/node"
+    },
+    { "src": "frontend/build", "use": "@vercel/static" }
   ],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/api/(.*)",
       "dest": "backend/server.js"
-    }
+    },
+    { "src": "/(.*)", "dest": "frontend/build/index.html" }
   ]
 }
