--- a/vercel.json
+++ b/vercel.json
@@ -4,15 +4,18 @@
   "builds": [
     {
       "src": "backend/server.js",
-      "use": "@vercel/node"
-    },
-    { "src": "frontend/build", "use": "@vercel/static" }
+      "use": "@vercel/node",
+      "config": {
+        "env": {
+          "NPM_CONFIG_PRODUCTION": "false"
+        }
+      }
+    }
   ],
   "routes": [
     {
       "src": "/(.*)",
       "dest": "backend/server.js"
-    },
-    { "src": "/(.*)", "dest": "frontend/build/index.html" }
+    }
   ]
 }
